--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
              <button type="submit" class="w-[30%] bg-green-800 hover:shadow-md rounded-md p-3 text-white shadow-white-500">create</button>
         </div>
         <div class="mt-5">
-            <img class="choose-img rounded-md object-cover" src="./images/background-img.jpg" alt="img ">
+            <img class=" w-full h-[200px] choose-img rounded-md object-cover" src="" alt="img ">
         </div>
     </form>
     <ul class=" w-[500px] flex flex-col mx-auto gap-5"></ul>
